--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -23,11 +23,15 @@ jobs:
           - 16
           - 17
           - 17j9
+          - 17-azul
+          - 17-graalvm
           - 18
           - 18j9
           - 19
           - 19j9
           - 21
+          - 21-azul
+          - 21-graalvm
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-qemu-action@v2
