--- a/java/21-azul/Dockerfile
+++ b/java/21-azul/Dockerfile
@@ -1,4 +1,5 @@
-FROM        --platform=$TARGETOS/$TARGETARCH azul/prime:21
+FROM --platform=$TARGETOS/$TARGETARCH azul/prime:21
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y \
 	&& apt-get install -y lsof curl ca-certificates openssl git tar sqlite3 fontconfig libfreetype6 tzdata iproute2 libstdc++6 \
