--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -30,6 +30,7 @@ jobs:
           - 19
           - 19j9
           - 21
+          - 21-http
           - 21-azul
           - 21-graalvm
           - 24
